fix(side-menu) remove extra space to the right of a collapsed side menu item in desktop (#621)
* fix(side-menu) remove not wanted extra space to the right of a collapsed menu item

* fix(side-menu): increase side-menu-width with 1px

--- a/packages/core/src/components/side-menu/side-menu-dropdown/side-menu-dropdown.scss
+++ b/packages/core/src/components/side-menu/side-menu-dropdown/side-menu-dropdown.scss
@@ -23,7 +23,7 @@
 
   .state-collapsed {
     .menu {
-      --side-menu-width: 68px;
+      --side-menu-width: 69px;
 
       position: absolute;
       left: var(--side-menu-width);
