--- a/packages/core/src/components/side-menu/side-menu.scss
+++ b/packages/core/src/components/side-menu/side-menu.scss
@@ -96,6 +96,7 @@
 
     &:host(.menu-collapsed) {
       width: 69px; // 68 + 1px for border
+      box-sizing: border-box;
 
       .menu {
         width: 68px;
